# dave.py

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  example.cpp  example.pyi  mkdocs.yml  noxfile.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/prepare-vcpkg/: action.yml
.github/workflows/: lint.yml  wheels.yml
docs/: .readthedocs.yml
scripts/: build.sh  collect_licenses.py  nanobind_stub_pattern.txt
src/: binding_core.hpp  dave.cpp  decryptor.cpp  encryptor.cpp  logging.hpp  session.cpp  signature_key_pair.cpp  signature_key_pair.hpp  utils.hpp
src/dave/: __init__.py  __init__.pyi  _dave_impl.pyi
tests/: test_basic.py  test_python.py
